--- a/KN.B2B.Web/Pages/Private/PowerBi.cshtml
+++ b/KN.B2B.Web/Pages/Private/PowerBi.cshtml
@@ -9,5 +9,6 @@
 <hr />
 
 <div>
+    test
     <iframe style="height:700px; width:100%;" src="https://app.powerbi.com/view?r=eyJrIjoiNzM5ZGU1ZDYtOTAxMy00ODE3LTllZDQtY2RmMDBlZjQ3NmFlIiwidCI6IjBiYmMwNWFjLTlhM2YtNGY3ZS1hMGZjLWMxNDYzYzZhMGQxZSIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>
 </div>
