--- a/KN.B2B.Web/Pages/Private/Requests/Products/Edit.cshtml
+++ b/KN.B2B.Web/Pages/Private/Requests/Products/Edit.cshtml
@@ -20,15 +20,19 @@
         <table>
             <thead>
                 <tr>
-                    <td>
-                        Sku
-                    </td>
-                    <td>Name</td>
+                    <td>Sku</td>
                     <td>Short Desc</td>
                 </tr>
             </thead>
             <tbody>
-
+                @foreach(var product in Model.childProducts)
+                {
+                    <tr>
+                        <td>@product.product_sku</td>
+                        <td>@product.product_shortDescriptionDK</td>
+                    </tr>
+                    
+                }
             </tbody>
         </table>
             @*<div class="form-group">
