--- a/KN.B2B.Web/Pages/Private/Requests/Products/viewAll.cshtml
+++ b/KN.B2B.Web/Pages/Private/Requests/Products/viewAll.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h1>All Products</h1>
-<form asp-page="./viewAll" method="get">
+@*<form asp-page="./viewAll" method="get">
     <div class="form-actions no-color">
         <p>
             Find by SKU/Product Name:
@@ -64,4 +64,4 @@
    asp-route-currentFilter="@Model.CurrentFilter"
    class="btn btn-primary @nextDisabled">
     Next
-</a>
+</a>*@
